Added linear regression using sklearn

--- a/step3/SimpleLinearRegression.ipynb
+++ b/step3/SimpleLinearRegression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Linear Regression\n",
+    "# Simple Linear Regression using statsmodels\n",
     "\n",
     "In this notebook, we'll build a linear regression model to predict `Sales` using an appropriate predictor variable."
    ]
